--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 
 <body class="cb">
 
-	<!-- <iframe class="image_play">
-		<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-        <script src="image_play.js"></script>
-	</iframe> -->
-	
-	<!-- <div class="container"> -->
+	<nav class="header">
+			<ul>
+				<a href="">NFTVS</a>
+			</nav>
 	
 	<iframe class="contFrame" src="data_scape.html"></iframe>
 
