--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 
 <body class="cb">
-
-	<nav class="header">
+	
+	<iframe class="contFrame" src="data_scape.html">
+		<nav class="header">
 			<ul>
 				<a href="">NFTVS</a>
 			</nav>
-	
-	<iframe class="contFrame" src="data_scape.html"></iframe>
+	</iframe>
 
 <!-- </div> -->
 
