--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
 
 <body class="cb">
 	
-	<iframe class="contFrame" src="data_scape.html">
-		<nav class="header">
-			<ul>
-				<a href="">NFTVS</a>
-			</nav>
-	</iframe>
+	<iframe class="contFrame" src="data_scape.html"></iframe>
 
 <!-- </div> -->
 
