--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="cb">
 	
-	<iframe class="contFrame" src="data_scape.html"></iframe>
+	<iframe class="contFrame" scrolling="no" src="data_scape.html"></iframe>
 
 <!-- </div> -->
 
