--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>NFTVS</title>
+		<title>TITLE</title>
 	
 	<link rel="stylesheet" href="stylesheet_2.css">
 
@@ -14,9 +14,6 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 
-	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
-	<script src="data_scape.js"></script>
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
@@ -25,12 +22,11 @@
 
 	<nav class="header">
 			<ul>
-				<a href="info.html">NFTVS</a>
+				<a href="main_menu.html">* AUBREY POHL *</a>
 			</nav>
 
 
 	<div class="cont">
-		
 
 	</div>
 
