--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>TITLE</title>
+		<title>INFO</title>
 	
 	<link rel="stylesheet" href="stylesheet_2.css">
 
@@ -22,7 +22,7 @@
 
 	<nav class="header">
 			<ul>
-				<a href="main_menu.html">* AUBREY POHL *</a>
+				<a href="main_menu.html">NFTVS</a>
 			</nav>
 
 
