--- a/page_teplate.html
+++ b/page_teplate.html
@@ -22,7 +22,8 @@
 
 	<nav class="header">
 			<ul>
-				<a href="main_menu.html">* AUBREY POHL *</a>
+				<a href="">* AUBREY POHL *</a>
+			</ul>
 			</nav>
 
 
