--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>INFO</title>
+		<title>ABOUT_NFTVS</title>
 	
 	<link rel="stylesheet" href="stylesheet_2.css">
 
