--- a/info.html
+++ b/info.html
@@ -28,6 +28,34 @@
 
 	<div class="cont">
 
+		<div class="infoCont">
+			<h2>WELCOME TO NFTVS</h2>
+			<hr class="a">
+			<p>The aim of this project is to take a critical and experimental approach to the topic of NFT art spaces and marketplaces. To question the tangibility, value, and effects of these spaces, which otherwise remain unseen, out of view, and unfelt.</p>
+			<hr class="a">
+			<p>What does it mean to visualize that which you do not see or feel? What is the role of emotion in using data to visualize and abstract these elements?</p>
+			<hr class="a">
+			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, value.</p>
+			<hr class="a">
+			<h2>DATA POINTS</h2>
+			<hr class="a">
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<div class="espace"></div>
+		</div>
+
+		<div class="menuCont">
+			<h2>NFTV1</h2>
+		</div>
+
 	</div>
 
 	
