--- a/info.html
+++ b/info.html
@@ -54,6 +54,22 @@
 
 		<div class="menuCont">
 			<h2>NFTV1</h2>
+			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_BIT_CONSUMP_CRYSTAL_BASIC.png">
+			<hr class="a">
+			<h2>NFTV2</h2>
+			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_CONSUMP_CRYSTAL_BASIC.png">
+			<hr class="a">
+			<h2>NFTV3</h2>
+			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_VALUE_CRYSTAL_BASIC0025.png">
+			<hr class="a">
+			<h2>NFTV4</h2>
+			<hr class="a">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_GLOBAL_TEMP_CRYSTAL_BASIC.png">
+			<hr class="a">
+			<div class="espace"></div>
 		</div>
 
 	</div>
