--- a/info.html
+++ b/info.html
@@ -28,6 +28,7 @@
 
 	<div class="cont">
 
+		<button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
 			<h2>WELCOME TO NFTVS</h2>
 			<hr class="a">
@@ -73,6 +74,23 @@
 		</div>
 
 	</div>
+
+	<script>
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+    } else {
+      content.style.display = "block";
+    }
+  });
+}
+</script>
 
 	
 </body>
