--- a/info.html
+++ b/info.html
@@ -38,7 +38,27 @@
 			<hr class="a">
 			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, value.</p>
 			<hr class="a">
-			<h2>DATA POINTS</h2>
+		<!-- <div class="datasets"> -->
+			<h2>DATA_SETS</h2>
+			<hr class="a">
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+			<p>DATA SET + VISUAL HERE</p>
+		<!-- </div> -->
+			<div class="espace"></div>
+		</div>
+
+
+		<!-- <button type="button" class="collapsible">DATA</button>
+		<div class="dataCont">
+			<h2>DATA_SETS</h2>
 			<hr class="a">
 			<p>DATA SET + VISUAL HERE</p>
 			<p>DATA SET + VISUAL HERE</p>
@@ -51,7 +71,8 @@
 			<p>DATA SET + VISUAL HERE</p>
 			<p>DATA SET + VISUAL HERE</p>
 			<div class="espace"></div>
-		</div>
+		</div> -->
+
 
 		<div class="menuCont">
 			<h2>NFTV1</h2>
