--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
 
 		<button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
-			<h2>WELCOME TO NFTVS</h2>
+			<h2>ABOUT_NFTVS</h2>
 			<hr class="a">
 			<p>The aim of this project is to take a critical and experimental approach to the topic of NFT art spaces and marketplaces. To question the tangibility, value, and effects of these spaces, which otherwise remain unseen, out of view, and unfelt.</p>
 			<hr class="a">
@@ -38,40 +38,15 @@
 			<hr class="a">
 			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, value.</p>
 			<hr class="a">
-		<!-- <div class="datasets"> -->
 			<h2>DATA_SETS</h2>
-			<hr class="a">
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-		<!-- </div> -->
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_BTC_CONSUMP_2021_06_02_144743935_.png">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_CONSUMP_2021_06_02_145856692_.png">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_CRYPTO_SEARCH_5_YR_2021_06_02_145634216_.png">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_VALUE_1YR_2021_06_02_150152332_.png">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_GLOBAL_TEMP_2021_06_02_150621690_.png">
 			<div class="espace"></div>
 		</div>
 
-
-		<!-- <button type="button" class="collapsible">DATA</button>
-		<div class="dataCont">
-			<h2>DATA_SETS</h2>
-			<hr class="a">
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<p>DATA SET + VISUAL HERE</p>
-			<div class="espace"></div>
-		</div> -->
 
 
 		<div class="menuCont">
