--- a/info.html
+++ b/info.html
@@ -20,10 +20,12 @@
 
 <body class="main">
 
-	<nav class="header">
-			<ul>
-				<a href="data_scape.html">NFTVS</a>
-			</nav>
+	<div class="header">
+		<ul>
+				<li><a href="data_scape.html">PLAY</a></li>
+				<li><a href="info.html">HOME</a></li>
+			</ul>
+		</div>
 
 
 	<div class="cont">
