--- a/data_scape.html
+++ b/data_scape.html
@@ -23,17 +23,10 @@
 
 <body class="main">
 
-	<nav class="header">
-			<ul>
-				<a href="info.html">NFTVS</a>
-			</ul>
-			</nav>
+	<div class="header">
+				<a href="info.html">ENTER</a>
+			</div>
 
-
-	<div class="cont">
-		
-
-	</div>
 
 	
 </body>
