--- a/info.html
+++ b/info.html
@@ -47,27 +47,36 @@
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_VALUE_1YR_2021_06_02_150152332_.png">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_GLOBAL_TEMP_2021_06_02_150621690_.png">
 			<div class="espace"></div>
+			<div class="espace"></div>
 		</div>
 
 
 
 		<div class="menuCont">
 			<h2>NFTV1</h2>
-			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_BIT_CONSUMP_CRYSTAL_BASIC.png">
-			<hr class="a">
+<!-- 			<hr class="a"> -->
+			<a href="nftv1.html">
+				<div class="imgLink">
+				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_BIT_CONSUMP_CRYSTAL_BASIC.png"></div></a>
+		
 			<h2>NFTV2</h2>
-			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_CONSUMP_CRYSTAL_BASIC.png">
-			<hr class="a">
+			<!-- <hr class="a"> -->
+		<a href="">
+			<div class="imgLink">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_CONSUMP_CRYSTAL_BASIC.png"></div></a>
+
 			<h2>NFTV3</h2>
-			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_VALUE_CRYSTAL_BASIC0025.png">
-			<hr class="a">
+			<!-- <hr class="a"> -->
+		<a href="">
+			<div class="imgLink">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_VALUE_CRYSTAL_BASIC0025.png"></div></a>
+
 			<h2>NFTV4</h2>
-			<hr class="a">
-			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_GLOBAL_TEMP_CRYSTAL_BASIC.png">
-			<hr class="a">
+			<!-- <hr class="a"> -->
+		<a href="">
+			<div class="imgLink">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_GLOBAL_TEMP_CRYSTAL_BASIC.png"></div></a>
+			<div class="espace"></div>
 			<div class="espace"></div>
 		</div>
 
