--- a/nftv2.html
+++ b/nftv2.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>NFTV1</title>
+		<title>NFTV2</title>
 	
 	<link rel="stylesheet" href="stylesheet_2.css">
 
@@ -39,24 +39,22 @@
 			<div class="espace"></div>
 			<div class="espace"></div>
 		</div> -->
-	
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV1 / BROKEN DISLPAY #1 / ETH ENERGY CONSUMPTION 2016 - 2021 / BTC ENERGY CONSUMPTION 2016 - 2021</h2></marquee>
+		<marquee><h2>NFTV2 / BROKEN DISLPAY #2 / DATA SET 1 / DATA SET 2</h2></marquee>
 			<br>
 			<br>
 			<br>
-		<div class="tvMenu">
+			<div class="tvMenu">
 		<ul>
-			<!-- <li><a href="nftv1.html">NFTV1</a></li> -->
-			<li><a href="nftv2.html">NFTV2</a></li>
+			<li><a href="nftv1.html">NFTV1</a></li>
+			<!-- <li><a href="nftv2.html">NFTV2</a></li> -->
 			<li><a href="nftv3.html">NFTV3</a></li>
 			<li><a href="nftv4.html">NFTV4</a></li>
 		</ul>
 		</div>
-			<br>
 			<hr class="a">
-			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
+			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
 			<hr class="a">
 			<div class="espace"></div>
 		
