--- a/info.html
+++ b/info.html
@@ -24,6 +24,7 @@
 		<ul>
 				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
+				<li><a href="">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -38,15 +39,21 @@
 			<hr class="a">
 			<p>What does it mean to visualize that which you do not see or feel? What is the role of emotion in using data to visualize and abstract these elements?</p>
 			<hr class="a">
-			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, value.</p>
+			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, ephemeral, value.</p>
 			<hr class="a">
+			<button type="button" class="collapsible">DATA_SETS</button>
+			<div class="dataSets">
 			<h2>DATA_SETS</h2>
+			<hr class="a">
+			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
+			<hr class="a">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_BTC_CONSUMP_2021_06_02_144743935_.png">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_CONSUMP_2021_06_02_145856692_.png">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_CRYPTO_SEARCH_5_YR_2021_06_02_145634216_.png">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_VALUE_1YR_2021_06_02_150152332_.png">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_GLOBAL_TEMP_2021_06_02_150621690_.png">
-			<div class="espace"></div>
+			<br>
+		</div>
 			<div class="espace"></div>
 		</div>
 
@@ -55,28 +62,27 @@
 		<div class="menuCont">
 			<h2>NFTV1</h2>
 <!-- 			<hr class="a"> -->
-			<a href="nftv1.html">
+			<a class="imgL" href="nftv1.html">
 				<div class="imgLink">
 				<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_BIT_CONSUMP_CRYSTAL_BASIC.png"></div></a>
 		
 			<h2>NFTV2</h2>
 			<!-- <hr class="a"> -->
-		<a href="">
+		<a class="imgL" href="nftv2.html">
 			<div class="imgLink">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_CONSUMP_CRYSTAL_BASIC.png"></div></a>
 
 			<h2>NFTV3</h2>
 			<!-- <hr class="a"> -->
-		<a href="">
+		<a class="imgL" href="nftv3.html">
 			<div class="imgLink">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_VALUE_CRYSTAL_BASIC0025.png"></div></a>
 
 			<h2>NFTV4</h2>
 			<!-- <hr class="a"> -->
-		<a href="">
+		<a class="imgL" href="nftv4.html">
 			<div class="imgLink">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_GLOBAL_TEMP_CRYSTAL_BASIC.png"></div></a>
-			<div class="espace"></div>
 			<div class="espace"></div>
 		</div>
 
