--- a/data_scape.html
+++ b/data_scape.html
@@ -27,6 +27,10 @@
 				<a href="info.html">ENTER</a>
 			</div>
 
+		<div class="cntrls">
+			<p>*move your mouse and click to play (on desktop)*</p>
+		</div>
+
 
 	
 </body>
