--- a/info.html
+++ b/info.html
@@ -24,7 +24,7 @@
 		<ul>
 				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
-				<li><a href="">PROCESS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -59,7 +59,7 @@
 
 
 
-		<div class="menuCont">
+		<div class="mainCont">
 			<h2>NFTV1</h2>
 <!-- 			<hr class="a"> -->
 			<a class="imgL" href="nftv1.html">
@@ -83,6 +83,12 @@
 		<a class="imgL" href="nftv4.html">
 			<div class="imgLink">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_4.png"></div></a>
+
+			<h2>NFTV5</h2>
+			<!-- <hr class="a"> -->
+		<a class="imgL" href="nftv5.html">
+			<div class="imgLink">
+			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/NFTV_BUTTON_5.png"></div></a>
 			<div class="espace"></div>
 		</div>
 
