--- a/nftv1.html
+++ b/nftv1.html
@@ -24,7 +24,7 @@
 		<ul>
 				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
-				<li><a href="">PROCESS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -49,9 +49,10 @@
 		<div class="tvMenu">
 		<ul>
 			<!-- <li><a href="nftv1.html">NFTV1</a></li> -->
-			<li><a href="nftv2.html">NFTV2</a></li>
-			<li><a href="nftv3.html">NFTV3</a></li>
-			<li><a href="nftv4.html">NFTV4</a></li>
+			<li class="subLi"><a href="nftv2.html">NFTV2</a></li>
+			<li class="subLi"><a href="nftv3.html">NFTV3</a></li>
+			<li class="subLi"><a href="nftv4.html">NFTV4</a></li>
+			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
 		</ul>
 		</div>
 			<br>
