--- a/nftv3.html
+++ b/nftv3.html
@@ -47,10 +47,11 @@
 			<br>
 			<div class="tvMenu">
 		<ul>
-			<li><a href="nftv1.html">NFTV1</a></li>
-			<li><a href="nftv2.html">NFTV2</a></li>
+			<li class="subLi"><a href="nftv1.html">NFTV1</a></li>
+			<li class="subLi"><a href="nftv2.html">NFTV2</a></li>
 			<!-- <li><a href="nftv3.html">NFTV3</a></li> -->
-			<li><a href="nftv4.html">NFTV4</a></li>
+			<li class="subLi"><a href="nftv4.html">NFTV4</a></li>
+			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
 		</ul>
 		</div>
 			<hr class="a">
