--- a/process.html
+++ b/process.html
@@ -24,12 +24,22 @@
 		<ul>
 				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
-				<li><a href="">PROCESS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
 
 	<div class="cont">
+
+		<button type="button" class="collapsible">INFO</button>
+		<div class="infoCont">
+			<button type="button" class="collapsible">PROPOSAL</button>
+			<button type="button" class="collapsible">SKETCHES</button>
+			<button type="button" class="collapsible">DATA_SCAPES</button>
+			<button type="button" class="collapsible">ESSAY</button>
+		</div>
+
+		<div class="mainCont"></div>
 
 	</div>
 
