--- a/nftv5.html
+++ b/nftv5.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>NFTV2</title>
+		<title>NFTV5</title>
 	
 	<link rel="stylesheet" href="stylesheet_2.css">
 
@@ -41,21 +41,21 @@
 		</div> -->
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV2 / BROKEN DISLPAY #2 / DATA SET 1 / DATA SET 2</h2></marquee>
+		<marquee><h2>NFTV5 / DIGITAL PHOTO FRAME / DATA SET 1 / DATA SET 2</h2></marquee>
 			<br>
 			<br>
 			<br>
 			<div class="tvMenu">
 		<ul>
 			<li class="subLi"><a href="nftv1.html">NFTV1</a></li>
-			<!-- <li><a href="nftv2.html">NFTV2</a></li> -->
+			<li class="subLi"><a href="nftv2.html">NFTV2</a></li>
 			<li class="subLi"><a href="nftv3.html">NFTV3</a></li>
 			<li class="subLi"><a href="nftv4.html">NFTV4</a></li>
-			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
+			<!-- <li><a href="nftv5.html">NFTV5</a></li> -->
 		</ul>
 		</div>
 			<hr class="a">
-			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
+			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>RATIO: XX:XX<br>COLOR: RGB<br>BRAND: XXXX / 2001</p>
 			<hr class="a">
 			<div class="espace"></div>
 		
