--- a/info.html
+++ b/info.html
@@ -42,7 +42,7 @@
 			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, ephemeral, value.</p>
 			<hr class="a">
 			<button type="button" class="collapsible">DATA_SETS</button>
-			<div class="dataSets">
+			<div class="subCont">
 			<h2>DATA_SETS</h2>
 			<hr class="a">
 			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
