--- a/data_scape.html
+++ b/data_scape.html
@@ -27,6 +27,16 @@
 				<a href="info.html">ENTER</a>
 			</div>
 
+			<svg class="svL" width="100%" height="100%">
+				<line x1="0" y1="0" x2="100%" y2="100%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="100%" x2="100%" y2="0" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="50%" y1="0" x2="50%" y2="100%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="50%" x2="50%" y2="100%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="50%" y1="100%" x2="100%" y2="50%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="100%" x2="50%" y2="0" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="100%" y1="100%" x2="50%" y2="0" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+			</svg>
+
 		<div class="cntrls">
 			<p>*move your mouse and click to play (on desktop)*</p>
 		</div>
