--- a/nftv3.html
+++ b/nftv3.html
@@ -24,7 +24,7 @@
 		<ul>
 				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
-				<li><a href="">PROCESS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -54,6 +54,7 @@
 			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
 		</ul>
 		</div>
+		<br>
 			<hr class="a">
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: SAMSUNG / 19XX</p>
 			<hr class="a">
