--- a/nftv2.html
+++ b/nftv2.html
@@ -24,7 +24,7 @@
 		<ul>
 				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
-				<li><a href="">PROCESS</a></li>
+				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
@@ -54,6 +54,7 @@
 			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
 		</ul>
 		</div>
+		<br>
 			<hr class="a">
 			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: SAMSUNG / 2020</p>
 			<hr class="a">
