--- a/process.html
+++ b/process.html
@@ -36,8 +36,8 @@
 		<div class="infoCont">
 			<!-- <marquee class="info"> --><h2>RESEARCH AND WRITING</h2><!-- </marquee> -->
 			<hr class="a">
-			<button type="button" class="collapsible">PROPOSAL</button>
-			<div class="subCont">
+			<!-- <button type="button" class="collapsible">PROPOSAL</button> -->
+			<!-- <div class="subCont"> -->
 				<h2>PROPOSAL 02.2021</h2>
 				<hr class="a">
 				<p>Theme and objective:
@@ -68,27 +68,27 @@ Objective:
 <br><br>
 The overall goal and object of my research is to explore the NFT space as objectively as possible, while still addressing the present issues of artist integrity, and environmental impacts. I do not intend to explore the space only as a protestor, but also as a visual journalist and digital artist. I believe there is potential for the NFT space to develop into a more sustainable and engaging community, or open the possibility of new spaces, but not before these issues are understood or addressed.</p>
 	<hr class="a">
-			</div>
-			<button type="button" class="collapsible">SKETCHBOOK</button>
-			<div class="subCont">
+			<!-- </div> -->
+			<!-- <button type="button" class="collapsible">SKETCHBOOK</button>
+			<div class="subCont"> -->
 				<h2>SKETCHBOOK</h2>
 				<hr class="a">
-			</div>
-			<button type="button" class="collapsible">OBERSVATIONS</button>
-			<div class="subCont">
+			<!-- </div> -->
+			<!-- <button type="button" class="collapsible">OBERSVATIONS</button>
+			<div class="subCont"> -->
 				<h2>OBSERVATIONS</h2>
 				<hr class="a">
-			</div>
+			<!-- </div>
 			<button type="button" class="collapsible">DATA_SCAPES</button>
-			<div class="subCont">
+			<div class="subCont"> -->
 				<h2>DATA_SCAPE_PROCESS</h2>
 				<hr class="a">
-			</div>
+			<!-- </div>
 			<button type="button" class="collapsible">WRITING</button>
-			<div class="subCont">
+			<div class="subCont"> -->
 				<h2>WRITING / FINAL THOUGHTS</h2>
 				<hr class="a">
-			</div>
+			<!-- </div> -->
 			<div class="espace"></div>
 		</div>
 
