--- a/info.html
+++ b/info.html
@@ -30,7 +30,7 @@
 
 
 	<div class="cont">
-
+		<!-- <div class="espace"></div> -->
 		<button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
 			<h2>ABOUT_NFTVS</h2>
@@ -41,8 +41,8 @@
 			<hr class="a">
 			<p>Terms to consider when viewing these experiments: Object, tangibility, fragility, permanence, rarity, emotion, data, landscape, legibility, space, metaphysical, physical, digital, virtual, metaphorical, abstraction, ephemeral, value.</p>
 			<hr class="a">
-			<button type="button" class="collapsible">DATA_SETS</button>
-			<div class="subCont">
+			<!-- <button type="button" class="collapsible">DATA_SETS</button> -->
+			<!-- <div class="subCont"> -->
 			<h2>DATA_SETS</h2>
 			<hr class="a">
 			<p>These data sets represent the bases for all final NFTV data scape outputs</p>
@@ -53,7 +53,7 @@
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_ETH_VALUE_1YR_2021_06_02_150152332_.png">
 			<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_FLAT_GLOBAL_TEMP_2021_06_02_150621690_.png">
 			<br>
-		</div>
+		<!-- </div> -->
 			<div class="espace"></div>
 		</div>
 
