--- a/process.html
+++ b/process.html
@@ -73,6 +73,19 @@ The overall goal and object of my research is to explore the NFT space as object
 			<div class="subCont"> -->
 				<h2>SKETCHBOOK</h2>
 				<hr class="a">
+				<!-- <div> -->
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%201.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%202.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%203.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%204.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%205.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%206.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%207.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<img class="imgSlides" src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/SKETCH_BOOK/THESISSKETCHBOOK%208.png?raw=true" onclick="plusDivs(-1)">&#10094;>
+				<!-- <button class="navL" onclick="plusDivs(-1)">&#10094;</button>
+  			<button class="navR" onclick="plusDivs(1)">&#10095;</button> -->
+<!-- </div> -->
 			<!-- </div> -->
 			<!-- <button type="button" class="collapsible">OBERSVATIONS</button>
 			<div class="subCont"> -->
@@ -94,12 +107,66 @@ The overall goal and object of my research is to explore the NFT space as object
 
 
 		<div class="mainCont">
-			<h2>XX.XX.XXXX</h2>
+			<h2>05.2021</h2>
 		<hr class="a">
+		<div class="grid-container2">
 		<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_BIT_CONSUMP_CRYSTAL_BASIC.png">
 		<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_CONSUMP_CRYSTAL_BASIC.png">
 		<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_ETH_VALUE_CRYSTAL_BASIC0025.png">
 		<img src="https://raw.githubusercontent.com/aubreyalfonzo/NFTVS/master/data/DATA_SCAPE_GLOBAL_TEMP_CRYSTAL_BASIC.png">
+	</div>
+
+			<h2>04-05.2021</h2>
+		<hr class="a">
+		<div class="grid-container2">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE__2021_05_17_011204625_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE__2021_05_17_011020944_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE__2021_05_12_244030074_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE__2021_05_12_243955679_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE__2021_05_10_141414925_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_15_220503081_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_15_220456767_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_15_220436970_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_2021_05_12_243756746_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ANNUAL_GLOBAL_TEMP_2021_05_09_224000620_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_09_175432014_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_09_222511566_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_09_162040628_.png?raw=true">
+		<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D_2/DATA_SCAPE_ETH_ENERGY_CONSUMP_2021_05_09_161127170_.png?raw=true">
+		<!-- <img src=""> -->
+	</div>
+
+			<h2>03-04.2021</h2>
+		<hr class="a">
+		<div class="grid-container2">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/7/DATA_SCAPE_3D_2021_05_02_214543201_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/7/DATA_SCAPE_3D_2021_05_02_214737939_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/6/DATA_SCAPE_3D_2021_05_02_181603226_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/6/DATA_SCAPE_3D_2021_05_02_181300623_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/4/DATA_SCAPE_3D_2021_04_28_090941227_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/4/DATA_SCAPE_3D_2021_04_28_091356354_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_231536625_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_225418761_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_202743404_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_195305159_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_174819867_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_165918813_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_165618409_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_3D/3/DATA_SCAPE_3D_2021_04_18_165347047_.png?raw=true">
+		</div>
+
+				<h2>02-03.2021</h2>
+		<hr class="a">
+		<div class="grid-container2">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_174832401_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_174936138_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_175133842_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_175259130_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_180226227_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_180836735_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_180945733_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/process/DATA_SCAPES/DATA_SCAPE_1/DATA_SCAPE_2021_04_17_181230625_.png?raw=true">
+		</div>
 		<div class="espace"></div>
 		</div>
 
@@ -119,6 +186,26 @@ for (i = 0; i < coll.length; i++) {
       content.style.display = "block";
     }
   });
+}
+</script>
+
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("imgSlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
 }
 </script>
 
