--- a/BACKUP/data_scape.html
+++ b/BACKUP/data_scape.html
@@ -38,7 +38,7 @@
 			</svg>
 
 		<div class="cntrls">
-			<p>*move your mouse and click to play (on desktop)*</p>
+			<p>*move your mouse and click to play*</p>
 		</div>
 
 
