--- a/BACKUP/nftv1.html
+++ b/BACKUP/nftv1.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>NFTV4</title>
+		<title>NFTV1</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="stylesheet_2.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -20,18 +20,16 @@
 
 <body class="main">
 
-	<div class="contFrame">
-
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
+				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
 				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
 
-	<!-- <div class="cont"> -->
+	<div class="cont">
 
 	<!-- <button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
@@ -41,24 +39,25 @@
 			<div class="espace"></div>
 			<div class="espace"></div>
 		</div> -->
+	
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV4 / OBSOLETE TV #2 / DATA SET 1 / DATA SET 2</h2></marquee>
+		<marquee><h2>NFTV1 / BROKEN DISLPAY #1 / ETH ENERGY CONSUMPTION 2016 - 2021 / BTC ENERGY CONSUMPTION 2016 - 2021</h2></marquee>
 			<br>
 			<br>
 			<br>
-			<div class="tvMenu">
+		<div class="tvMenu">
 		<ul>
-			<li class="subLi"><a href="nftv1.html">NFTV1</a></li>
+			<!-- <li><a href="nftv1.html">NFTV1</a></li> -->
 			<li class="subLi"><a href="nftv2.html">NFTV2</a></li>
 			<li class="subLi"><a href="nftv3.html">NFTV3</a></li>
-			<!-- <li><a href="nftv4.html">NFTV4</a></li> -->
+			<li class="subLi"><a href="nftv4.html">NFTV4</a></li>
 			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
 		</ul>
 		</div>
-		<br>
+			<br>
 			<hr class="a">
-			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
+			<p>TYPE: LCD / HD<br>FACTOR: DEFECT / PARTIALLY WORKING<br>RATIO: 16:19<br>COLOR: RGB<br>BRAND: NEC / 2020</p>
 			<hr class="a">
 			<div class="espace"></div>
 		
