--- a/BACKUP/process.html
+++ b/BACKUP/process.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>PROCESS</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="stylesheet_2.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -21,18 +21,16 @@
 
 <body class="main">
 
-	<div class="contFrame">
-
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
+				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
 				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
 
-	<!-- <div class="cont"> -->
+	<div class="cont">
 
 		<button type="button" class="collapsible">RESEARCH & WRITING</button>
 		<div class="infoCont">
@@ -174,7 +172,7 @@ The overall goal and object of my research is to explore the NFT space as object
 		<div class="espace"></div>
 		</div>
 
-	<!-- </div> -->
+	</div>
 
 	<script>
 var coll = document.getElementsByClassName("collapsible");
@@ -212,8 +210,6 @@ function showDivs(n) {
   x[slideIndex-1].style.display = "block";  
 }
 </script>
-
-</div>
 
 	
 </body>
