--- a/nftv5.html
+++ b/nftv5.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>NFTV5</title>
 	
-	<link rel="stylesheet" href="stylesheet_2.css">
+	<link rel="stylesheet" href="stylesheet.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -20,16 +20,18 @@
 
 <body class="main">
 
+	<div class="contFrame">
+
 	<div class="header">
 		<ul>
-				<li><a href="data_scape.html">PLAY</a></li>
+				<li><a href="index.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
 				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
 
-	<div class="cont">
+	<!-- <div class="cont"> -->
 
 	<!-- <button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
