--- a/BACKUP/info.html
+++ b/BACKUP/info.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 		<title>ABOUT_NFTVS</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="stylesheet_2.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -20,18 +20,16 @@
 
 <body class="main">
 
-	<div class="contFrame">
-
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
+				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
 				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
 
-	<!-- <div class="cont"> -->
+	<div class="cont">
 		<!-- <div class="espace"></div> -->
 		<button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
@@ -94,7 +92,7 @@
 			<div class="espace"></div>
 		</div>
 
-	<!-- </div> -->
+	</div>
 
 	<script>
 var coll = document.getElementsByClassName("collapsible");
@@ -112,8 +110,6 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
-
-</div>
 
 	
 </body>
