--- a/BACKUP/nftv5.html
+++ b/BACKUP/nftv5.html
@@ -4,9 +4,9 @@
 
 <head>
 	<meta charset="UTF-8">
-		<title>NFTV4</title>
+		<title>NFTV5</title>
 	
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="stylesheet_2.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -20,18 +20,16 @@
 
 <body class="main">
 
-	<div class="contFrame">
-
 	<div class="header">
 		<ul>
-				<li><a href="index.html">PLAY</a></li>
+				<li><a href="data_scape.html">PLAY</a></li>
 				<li><a href="info.html">HOME</a></li>
 				<li><a href="process.html">PROCESS</a></li>
 			</ul>
 		</div>
 
 
-	<!-- <div class="cont"> -->
+	<div class="cont">
 
 	<!-- <button type="button" class="collapsible">INFO</button>
 		<div class="infoCont">
@@ -43,7 +41,7 @@
 		</div> -->
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV4 / OBSOLETE TV #2 / DATA SET 1 / DATA SET 2</h2></marquee>
+		<marquee><h2>NFTV5 / DIGITAL PHOTO FRAME / DATA SET 1 / DATA SET 2</h2></marquee>
 			<br>
 			<br>
 			<br>
@@ -52,13 +50,13 @@
 			<li class="subLi"><a href="nftv1.html">NFTV1</a></li>
 			<li class="subLi"><a href="nftv2.html">NFTV2</a></li>
 			<li class="subLi"><a href="nftv3.html">NFTV3</a></li>
-			<!-- <li><a href="nftv4.html">NFTV4</a></li> -->
-			<li class="subLi"><a href="nftv5.html">NFTV5</a></li>
+			<li class="subLi"><a href="nftv4.html">NFTV4</a></li>
+			<!-- <li><a href="nftv5.html">NFTV5</a></li> -->
 		</ul>
 		</div>
 		<br>
 			<hr class="a">
-			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: DAEWOO / 19XX</p>
+			<p>TYPE: DIGITAL PHOTO FRAME<br>FACTOR: WORKING / OBSOLETE / AUTOMATIC<br>RATIO: XX:XX<br>COLOR: RGB<br>BRAND: XXXX / 2001</p>
 			<hr class="a">
 			<div class="espace"></div>
 		
