--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html class="ch" lang="en-us">
+<html class="main" lang="en-us">
 
 <head>
 	<meta charset="UTF-8">
@@ -11,16 +11,43 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
-<body class="cb">
+<body class="main">
+
+	<div class="contFrame">
+
+	<div class="header">
+				<a href="info.html">ENTER</a>
+			</div>
+
+			<svg class="svL" width="100%" height="100%">
+				<line x1="0" y1="3.5%" x2="90%" y2="90%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="90%" x2="90%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="45%" y1="3.5%" x2="45%" y2="90%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="45%" x2="45%" y2="90%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="45%" y1="90%" x2="90%" y2="45%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="90%" x2="45%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="90%" y1="90%" x2="45%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+			</svg>
+
+			<script src="data_scape.js"></script>
+
+		<div class="cntrls">
+			<p>*move your mouse and click to play*</p>
+		</div>
+
+	</div>
+
+
 	
-	<iframe class="contFrame" src="data_scape.html"></iframe>
-
-<!-- </div> -->
-
 </body>
 	
 
