--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
 				<a href="info.html">ENTER</a>
 			</div>
 
-			<svg class="svL" width="100%" height="100%">
-				<line x1="0" y1="3.5%" x2="90%" y2="90%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
-				<line x1="0" y1="90%" x2="90%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
-				<line x1="45%" y1="3.5%" x2="45%" y2="90%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
-				<line x1="0" y1="45%" x2="45%" y2="90%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
-				<line x1="45%" y1="90%" x2="90%" y2="45%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
-				<line x1="0" y1="90%" x2="45%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
-				<line x1="90%" y1="90%" x2="45%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+
+			<svg class="svM" width="100%" height="100%">
+				<line x1="0" y1="3.5%" x2="100%" y2="100%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="100%" x2="100%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="50%" y1="3.5%" x2="50%" y2="100%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="50%" x2="50%" y2="100%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="50%" y1="100%" x2="100%" y2="50%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="0" y1="100%" x2="50%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
+				<line x1="100%" y1="100%" x2="50%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
 			</svg>
 
 			<script src="data_scape.js"></script>
