--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 				<line x1="100%" y1="100%" x2="50%" y2="3.5%" style="stroke: rgb(255, 255, 255); stroke-width: 1"/>
 			</svg>
 
+			<div id="jsCont">
 			<script src="data_scape.js"></script>
+		</div>
 
 		<div class="cntrls">
 			<p>*move your mouse and click to play*</p>
