--- a/process.html
+++ b/process.html
@@ -36,8 +36,8 @@
 
 		<button type="button" class="collapsible">RESEARCH & WRITING</button>
 		<div class="infoCont">
-			<!-- <marquee class="info"> --><h2>RESEARCH AND WRITING</h2><!-- </marquee> -->
-			<hr class="a">
+			<!-- <marquee class="info"> --><div class="headLine"><h2>RESEARCH AND WRITING</h2><!-- </marquee> -->
+			<hr class="a"></div>
 			<!-- <button type="button" class="collapsible">PROPOSAL</button> -->
 			<!-- <div class="subCont"> -->
 				<h2>PROPOSAL 02.2021</h2>
