--- a/nftv1.html
+++ b/nftv1.html
@@ -44,7 +44,7 @@
 	
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV1 / BROKEN DISLPAY #1 / ETH ENERGY CONSUMPTION 2016 - 2021 / BTC ENERGY CONSUMPTION 2016 - 2021</h2></marquee>
+		<marquee><h2>NFTV1 / BROKEN DISLPAY #1 / ALL NFT TOTAL NUMBER OF SALES 2020-2021 + ART NFT TOTAL NUMBER OF SALES 2020-2021</h2></marquee>
 			<br>
 			<br>
 			<br>
