--- a/nftv3.html
+++ b/nftv3.html
@@ -60,6 +60,14 @@
 			<hr class="a">
 			<p>TYPE: CRT / TUBE TV<br>FACTOR: WORKING / OCCUPY SPACE<br>RATIO: XX:XX<br>COLOR: VGA<br>BRAND: SAMSUNG / 19XX</p>
 			<hr class="a">
+			<div class="grid-container">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_BTC_ENERGY_CONSUMP_17_21_2021_06_13_195343539_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_NFTV3_ASYMM_ENERGY_ETH_BTC_2021_06_13_225856044_.png?raw=true">
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/DATA_SCAPE_ETH_ENERGY_CONSUMP_17_21_2021_06_13_195747544_.png?raw=true">
+		</div>
+			<img src="https://github.com/aubreyalfonzo/NFTVS/blob/master/data/NFTV3/NFTV3.png?raw=true">
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/nb0MRAko6Fc?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/CFRbhd5g8FA?autoplay=1&showinfo=0&loop=1" frameborder="0" allowfullscreen></iframe>
 			<div class="espace"></div>
 		
 	</div>
