--- a/nftv2.html
+++ b/nftv2.html
@@ -43,7 +43,7 @@
 		</div> -->
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV2 / BROKEN DISLPAY #2 / DATA SET 1 / DATA SET 2</h2></marquee>
+		<marquee><h2>NFTV2 / BROKEN DISLPAY #2 / ETH VALUE USD + BTC VALUE USD</h2></marquee>
 			<br>
 			<br>
 			<br>
