--- a/nftv3.html
+++ b/nftv3.html
@@ -43,7 +43,7 @@
 		</div> -->
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV3 / OBSOLETE TV #1 / DATA SET 1 / DATA SET 2</h2></marquee>
+		<marquee><h2>NFTV3 / OBSOLETE TV #1 / ETH ENERGY CONSUMPTION 2016-2021 + BTC ENERGY CONSUMPTION 2016-2021</h2></marquee>
 			<br>
 			<br>
 			<br>
