--- a/nftv5.html
+++ b/nftv5.html
@@ -43,7 +43,7 @@
 		</div> -->
 
 	<div class="nftvCont">
-		<marquee><h2>NFTV5 / DIGITAL PHOTO FRAME / DATA SET 1 / DATA SET 2</h2></marquee>
+		<marquee><h2>NFTV5 / DIGITAL PHOTO FRAME / ALL NFT SALES 2018-PRESENT</h2></marquee>
 			<br>
 			<br>
 			<br>
